# Excel-Deno-Bridge

./: .gitignore  Cargo.toml  DenoBridge.bas.template  DenoCore.bas.template  README.md  UserScripts.bas.template  assemble_xlsm.ps1  build.rs  exports.def
.cargo/: config.toml
.github/workflows/: build-dll.yml  build-xlsm.yml
src/: lib.rs
