[package]
name = "excel_deno_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "excel_deno_bridge"
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.280.0"
once_cell = "1.19"
tokio = { version = "1.36", features = ["rt", "macros"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Ole", "Win32_System_Com", "Win32_System_Variant", "Win32_UI_WindowsAndMessaging" ] }
widestring = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
